# PyWebApp-Framework

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  pywebapp.json  requirements.txt
android/: build.gradle.kts  gradle.properties  keystore.properties  keystore.properties.template  pywebapp-release.keystore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: __init__.py  api.py  handlers.py  registry.py
desktop/: bridge.py  hot_reload.py  main.py  requirements.txt
docs/: _config.yml  android.md  desktop.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs  config.mts
docs/advanced/: error-handling.md  index.md  middleware.md  namespaces.md  testing.md
docs/api/: bridge-js.md  bridge-native.md  dispatcher.md  index.md  registry.md
docs/guide/: adding-methods.md  architecture.md  async-support.md  building.md  calculation-tutorial.md  cli.md  configuration.md  getting-started.md  github-setup.md  hot-reload.md  licensing.md  permissions.md  prerequisites.md  routing.md  scaling.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
local_data/: app_database.sqlite
pywebapp/: cli.py
pywebapp_elite.egg-info/: PKG-INFO  SOURCES.txt
pywebapp_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pywebapp_native.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: build_android.py  build_android.sh  build_android_release.py  build_desktop.py  build_frontend.py  dev_sync.py  run_desktop.py  sync_config.py
tests/: test_api.py  test_bridge.py  test_handlers.py
(+23 files in other folders)
