[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywebapp-framework"
version = "1.0.0"
authors = [
  { name="Sonu Vishwakarma", email="sonuportfolio77@gmail.com" },
]
description = "A high-performance, scalable cross-platform framework using Python and React."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Frameworks",
]
dependencies = [
    "pywebview>=4.0",
    "pyinstaller>=5.0",
    "requests",
]

[project.scripts]
pywebapp = "pywebapp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pywebapp*"]
